# physics760-exercises

./: .gitignore  README.rst
01-random_walk/: CMakeLists.txt  README.rst  analysis.py  averages.csv  main.cu  random_walk.cu  random_walk.h  rms.csv
